--- a/index.html
+++ b/index.html
@@ -7,6 +7,55 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <h1>Hello.</h1>
+    <h3>My name is Lorem Ipsum</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex</p>
+    <div class="ballCenter">
+        <svg width="428" height="428" viewBox="0 0 428 428" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="214" cy="214" r="214" fill="url(#paint0_linear_1_23)"/>
+            <defs>
+            <linearGradient id="paint0_linear_1_23" x1="213.715" y1="0" x2="213.715" y2="428" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#FDC898"/>
+            <stop offset="1" stop-color="#B517FF" stop-opacity="0.11"/>
+            </linearGradient>
+            </defs>
+        </svg>            
+    </div>
+    <div class="small-circle1">
+        <svg width="27.5" height="25.7" viewBox="0 0 55 55" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="27" cy="27" r="27" transform="matrix(0.707107 0.707107 0.707107 -0.707107 -11 27.1836)" fill="url(#paint0_linear_1_25)"/>
+            <defs>
+            <linearGradient id="paint0_linear_1_25" x1="26.964" y1="0" x2="26.964" y2="54" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#FDC898"/>
+            <stop offset="1" stop-color="#B517FF" stop-opacity="0.11"/>
+            </linearGradient>
+            </defs>
+        </svg>            
+    </div>
+    <div class="small-circle-2">
+        <svg xmlns="http://www.w3.org/2000/svg" width="27.5" height="27.5" viewBox="0 0 55 55" fill="none">
+            <circle cx="27" cy="27" r="27" transform="matrix(0.707107 0.707107 0.707107 -0.707107 -11 27.1836)" fill="url(#paint0_linear_1_24)"/>
+            <defs>
+              <linearGradient id="paint0_linear_1_24" x1="26.964" y1="0" x2="26.964" y2="54" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#FDC898"/>
+                <stop offset="1" stop-color="#B517FF" stop-opacity="0.11"/>
+              </linearGradient>
+            </defs>
+          </svg>
+    </div>
+    <div class="small-circle-3">
+        <svg xmlns="http://www.w3.org/2000/svg" width="27.5" height="27.5" viewBox="0 0 55 55" fill="none">
+            <circle cx="27" cy="27" r="27" transform="matrix(0.707107 0.707107 0.707107 -0.707107 -11 27.1836)" fill="url(#paint0_linear_1_27)"/>
+            <defs>
+              <linearGradient id="paint0_linear_1_27" x1="26.964" y1="0" x2="26.964" y2="54" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#FDC898"/>
+                <stop offset="1" stop-color="#B517FF" stop-opacity="0.11"/>
+              </linearGradient>
+            </defs>
+          </svg>
+    </div>
+    <div class="circle">
+        
+    </div>
 </body>
 </html>
